--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ figcaption {
 /* ID selector (apply to one unique element per page) */
 
 #logo { /* select elements with id="logo" */
-	background-color: aqua; 
+	
 }
 
 /* Descendent Selector */
@@ -70,12 +70,24 @@ figcaption {
 	color:red;
 }
 
+
+/* //////// MEDIA ////////*/
+
+img, video, audio {
+	max-width: 100%;
+}
+
 /* //////// LAYOUT ////////*/
 
+* { 
+	-webkit-box-sizing: border-box;
+	-moz box-sizing: border-box;
+	box-sizing: border-box;
+}
+
 .wrapper { 
-	width: 960px;
+	width: 1080px;
 	margin: 0 auto; 
-	background: #eee; 
 }
 
 .col-1 {
@@ -94,6 +106,64 @@ figcaption {
 	background: #ccc; 
 	width: 100%;
 }
+.clearfix:after {
+	content: "."; 
+	display: block;
+	clear: both;
+	visibility: hidden; 
+	height: 0; 
+	line-height: 0; 
+}
+
+[class*="col-"] {
+	margin-left: 2%; 
+}
+
+.first { 
+margin-left: 0%
+}
+
+
+/* //////// SECTIONS ////////*/
+
+header {
+	position: fixed; 
+	top: 0; 
+	left: 0;
+	width: 100%;
+	background: #fff; 
+	z-index: 1; 
+}
+
+
+section {
+padding: 20px;
+	margin-bottom: 20px; 
+}
+
+/* //////// SOCIAL ////////*/
+
+#social {
+	position: fixed; 
+	top: 200px;
+	right: 20px;
+	width: 40px;
+	z-index: 1;
+}
+
+#social a {
+	display: block; 
+	width: 40px;
+	height: 40px;
+	background: yellow; 
+}
+
+
+
+
+
+
+
 
 
 
